--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1,56 +1,25 @@
+* {box-sizing: border-box;}
 
-body {
-    font-family: "Jost", sans-serif;
-    font-size: 2rem;
-    text-align: center;
-    
-    
-    background-size: 100vw;
-    color: #1F1E14;
-    padding: 0px;
-    margin: 0px;
-  }
-  
-  .dice-roller {
-    position: relative;
-    background-color: rgba(208, 213, 206, 0.801);
-    border-style: solid;
-    padding: 20px;
-    margin: 20px 20% auto 20%;
-  }
-  
-  button {
-    background-color: #B4BC9F;
-    border-radius: 4px;
-    padding: 10px;
-    font-family: "Jost", sans-serif;
-    font-size: 1.8rem;
-  }
-  
-  button:hover {
-    background-color: #C47439;
-  }
-  
-  #rollResult {
-    box-sizing: border-box;
-    padding: 8px 0px 0px 4px;
-    font-size: 30px;
-    color: rgb(14, 27, 1);
-    
-  }
-  
-  #history {
-    text-align: column;
-    color: rgb(236, 89, 89);
-  }
-  
-  .fa-dice-d6 {
-    transition: 0.2s;
-  }
-  
-  .fa-dice-d20:hover {
-    transform: rotate(90deg) scale(1.2);
-  }
-  
-  
-  
+body {display: flex;     
+     justify-content: center;     
+     background-repeat: no-repeat;
+     background-color: lightblue;
+     font-family: "Jost", sans-serif;
+}
+
+#roll {
+    background-color: rgb(250, 33, 33);
+    color: white;
+    width: 100px;
+}
+
+#total-rolls {
+    background-color:black;
+    color: white;
+}
+
+#reset {
+    background-color: black;
+    color: white;
+    width: 100px;
+}
